--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -72,6 +72,11 @@ input, select, textarea {
 	appearance: none;
 }
 
+/* add */
+a {
+	text-decoration: none;
+	text-align: center;
+}
 /* Row */
 
 	.row {
