--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -76,6 +76,11 @@ input, select, textarea {
 a {
 	text-decoration: none;
 	text-align: center;
+	color: #363636;
+}
+
+a:hover {
+	color: #777777;
 }
 /* Row */
 
